misaligned loader fixed

--- a/frontend/src/styles/components/backend/_login-form.scss
+++ b/frontend/src/styles/components/backend/_login-form.scss
@@ -2,6 +2,7 @@
 @use '../../utils/' as *;
 
 .login-box {
+  position: relative;
   grid-column: 1/-1;
   place-self: center;
   width: 50vw;
